tests/fixtures/invalid/duplicate-keys-dotted.stderr
TOML parse error at line 3, column 1
  |
3 | ssl-version.min = 'tlsv1.2'
  | ^
Dotted key `ssl-version` attempted to extend non-table type (`string`)

